# ResumeAI

./: README.md  pyproject.toml
configs/: default.yaml  lightweight.yaml
src/resume_ai/: __init__.py  agents.py  chunking.py  cli.py  config.py  document_loader.py  llm.py  orchestrator.py  prompts.py  types.py  vector_store.py
